# AXIONBLADE

./: .gitignore  .vercelignore  AUDIT_REPORT_2026-02-26.md  AXIONBLADE_BUILD_PLAN.md  AXIONBLADE_ECONOMY_AXIOMS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_GUIDE.md  EXECUTION_REPORT.md  FINAL_PRE_MAINNET_REPORT.md  FINAL_SUMMARY.md  GIT_PUSH_FIX.md  INTEGRATION_TEST_REPORT.md  MAINNET_CHECKLIST.md  NOUMEN_BUILD_PLAN.md  PARTE_3_IMPLEMENTATION_PLAN.md  PITCH.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_TEST_REPORT.md  UI_UX_IMPROVEMENTS.md  VERCEL_DEPLOY_INSTRUCTIONS.md  deploy-cost-analysis.md  vercel.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .env.example  .vercelignore  README.md  next.config.ts  package-lock.json  package.json  vercel.json
contracts/: .env.production.example  Anchor.toml  CLAUDE.md  Cargo.toml  SECURITY_REVIEW.md  package-lock.json  package.json
contracts/docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
contracts/keys/: aeon_authority.json  keeper_authority.json  super_authority.json
contracts/programs/axionblade-token-vault/: Cargo.toml  README.md
contracts/programs/axionblade-token-vault/src/: lib.rs
contracts/programs/noumen-proof/: Cargo.toml  README.md
contracts/programs/noumen-proof/src/: lib.rs
contracts/scripts/: create-agents-mainnet.ts  deploy-devnet.sh  deploy-mainnet-fase1.sh  deploy-mainnet-fase2.sh  execute-policy-mainnet.ts  init-aeon-mainnet.ts  init-devnet.ts  init-localnet.ts  init-mainnet-fase1.ts  init-mainnet-fase2.ts  init-proof-mainnet.ts  (+8 more)
docs/: USER_GUIDE.md  frontend-feature-flags.md
files/: 00_IDENTIDADE_NOUMEN.md  01_CONSULTORIA_TECNICA_INICIAL.md  02_EVOLUCAO_SISTEMICA_MULTI_AGENTE.md  03_AGENTE_DEFI_APOLLO_CONCEITUAL.md  04_ARQUITETURA_v3.0.md  05_ARQUITETURA_v3.1.md  06_ARQUITETURA_v3.2.md  07_ARQUITETURA_v3.2.1.md  08_ARQUITETURA_v3.2.2.md  09_ARQUITETURA_v3.2.2.1.md  10_ARQUITETURA_v3.2.2.2.md  11_ARQUITETURA_v3.2.2.3.md  12_ARQUITETURA_v3.2.3_HERMES.md  13_AXIOMAS_REFERENCIA.md  INDICE_MESTRE.md
noumen/: Cargo.toml  README.md  SECURITY_REVIEW.md  tsconfig.json
noumen/crates/shared-types/: Cargo.toml
noumen/programs/noumen-apollo/src/: lib.rs
noumen/programs/noumen-auditor/src/: lib.rs
noumen/programs/noumen-core/: Cargo.toml
noumen/programs/noumen-core/src/: lib.rs
noumen/programs/noumen-hermes/: Cargo.toml
noumen/programs/noumen-hermes/src/: lib.rs
noumen/programs/noumen-proof/src/: lib.rs
noumen/programs/noumen-service/: Cargo.toml
noumen/programs/noumen-service/src/: lib.rs
noumen/programs/noumen-treasury/: Cargo.toml
noumen/programs/noumen-treasury/src/: lib.rs
noumen/scripts/: deploy-devnet.sh  init-devnet.ts
noumen/tests/: noumen.ts
scripts/: README.md  close-all-programs.sh  deploy-mainnet.sh  deploy-token-vault.sh  init-mainnet.ts  init-token-vault.ts  kronos-crank.ts  run-execute-policy.sh  verify-mainnet.sh
(+165 files in other folders)
