[workspace]
members = [
    "programs/noumen-core",
    "programs/noumen-proof",
    "programs/noumen-treasury",
    "programs/noumen-apollo",
    "programs/noumen-hermes",
    "programs/noumen-auditor",
    "programs/noumen-service",
    "crates/shared-types",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
shared-types = { path = "crates/shared-types" }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
