[package]
name = "axionblade-token-vault"
version = "0.1.0"
description = "AXIONBLADE Token Vault - Conditional $AXION launch with KRONOS proof"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axionblade_token_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
