[package]
name = "noumen-service"
version = "0.1.0"
edition = "2021"
description = "Service marketplace and pricing"

[lib]
crate-type = ["cdylib", "lib"]
name = "noumen_service"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
shared-types = { path = "../../crates/shared-types" }
