[package]
name = "noumen-treasury"
version = "0.1.0"
edition = "2021"
description = "Treasury and CCS revenue distribution"

[lib]
crate-type = ["cdylib", "lib"]
name = "noumen_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
shared-types = { path = "../../crates/shared-types" }
